# MindFlow

./: .gitattributes  .gitignore  CLAUDE.md  README.md  start.bat
backend/: .env.example  requirements.txt
backend-next/: .gitignore  README.md  alembic.ini  mindflow.spec  pyproject.toml
backend-next/alembic/: env.py
backend-next/alembic/versions/: 0001_create_core_tables.py  0002_add_panel_transcript.py  0003_create_chat_messages.py  0004_add_intervention_logs_index.py  0005_add_intervention_feedback.py
backend-next/src/mindflow/: __init__.py  app.py  config.py  errors.py  logging_config.py  main.py  tray.py
backend-next/src/mindflow/agents/: conflict.py  experts.py  langchain_tools.py  llm_gateway.py  orchestrator.py  types.py
backend-next/src/mindflow/api/: __init__.py  deps.py  errors.py  websocket.py
backend-next/src/mindflow/api/middleware/: __init__.py  auth.py  host.py  logging.py  ratelimit.py
backend-next/src/mindflow/api/routes/: __init__.py  activities.py  analytics.py  attribution.py  autonomy.py  chat.py  collector.py  export.py  focus.py  health.py  intervention.py  panel.py  preferences.py  reports.py
backend-next/src/mindflow/domain/: baseline.py  deviation.py  events.py  evidence.py  features.py  ids.py  intervention.py  labeling.py  procrastination.py
backend-next/src/mindflow/eval/: __init__.py  __main__.py  adapters.py  runner.py  scenarios.py
backend-next/src/mindflow/infrastructure/: database.py  migrations.py  notification.py
backend-next/src/mindflow/infrastructure/collectors/: base.py  darwin.py  wayland_fallback.py  win32.py  x11.py
backend-next/src/mindflow/infrastructure/llm/: client.py  schemas.py  summary.py
backend-next/src/mindflow/infrastructure/repositories/: activity.py  analysis.py  base.py  baseline.py  chat.py  focus.py  intervention.py  preferences.py  report.py
backend-next/src/mindflow/infrastructure/security/: crisis_detector.py  token_manager.py
backend-next/src/mindflow/services/: analysis_service.py  autonomy_service.py  chat_service.py  collector_service.py  effectiveness_service.py  evidence_service.py  export_service.py  intervention_service.py  intervention_throttle.py  llm_service.py  maintenance_service.py  panel_service.py  report_service.py  scheduler.py
backend-next/src/mindflow/train/: __init__.py  __main__.py  features.py  models.py  pipeline.py  serialization.py  synthetic_data.py
backend-next/src/mindflow/train/models/: __init__.py  classifier.py  clustering.py  hmm.py  manager.py  types.py
backend-next/tests/: conftest.py  test_activity_repository.py  test_agents_conflict.py  test_agents_orchestrator.py  test_agents_types.py  test_analysis_service.py  test_autonomy_service.py  test_baseline.py  test_chat_repository.py  test_chat_service.py  test_collector_service.py  test_collectors.py  test_config.py  test_crisis_detector.py  test_database.py  test_deviation.py  test_effectiveness_service.py  test_errors.py  test_eval_adapters.py  test_eval_runner.py  test_eval_scenarios.py  test_events.py  test_evidence_domain.py  test_evidence_service.py  test_export_service.py  test_features.py  test_focus_repository.py  test_ids.py  test_intervention_domain.py  test_intervention_repository.py  test_intervention_service.py  test_intervention_throttle.py  test_labeling.py  test_langchain_chat.py  test_langchain_gateway.py  test_langchain_tools.py  test_langgraph_orchestrator.py  test_llm_client.py  test_llm_schemas.py  test_llm_service.py  (+31 more)
backend/mindflow/: config.py  logging_config.py  main.py  tray.py
backend/tests/: conftest.py  test_api.py  test_baseline.py  test_data_pipeline.py  test_features.py  test_labeling.py  test_scheduler.py  test_title_analyzer.py  test_tracker.py
docs/: backend-crash-course.md  design-spec.md  development-guide.md  frontend-api-spec.md  implementation-plan.md  team-operation-manual.md
frontend/: README.md  package-lock.json  package.json
(+95 files in other folders)
