[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindflow"
version = "2.0.0-alpha"
description = "Local-first intelligent focus assistant"
requires-python = ">=3.11"
authors = [
    {name = "RedMoon", email = "3071187226@qq.com"},
]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "platformdirs>=4.0",
    "uuid6>=2024.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_any_unimported = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "uuid6",
    "loguru",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
