[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindflow"
version = "2.0.0-alpha"
description = "Local-first intelligent focus assistant"
requires-python = ">=3.11"
authors = [
    {name = "RedMoon", email = "3071187226@qq.com"},
]
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "platformdirs>=4.0",
    "uuid6>=2024.0.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pandas>=2.0",
    "langchain-core>=0.3",
    "langchain-deepseek>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]
ml = [
    "hmmlearn>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/mindflow/train/models.py" = ["N803", "N806"]
"src/mindflow/train/pipeline.py" = ["N806"]
"src/mindflow/train/features.py" = ["N806"]
# E501: Chinese text in system prompts, eval output formatting, and
# test fixtures naturally exceeds 100 chars
"src/mindflow/agents/experts.py" = ["E501"]
"src/mindflow/eval/__main__.py" = ["E501"]
"src/mindflow/eval/adapters.py" = ["E501"]
"tests/test_agents_types.py" = ["E501"]
"tests/test_agents_orchestrator.py" = ["E501"]
"tests/test_eval_adapters.py" = ["E501"]
"tests/test_eval_runner.py" = ["E501"]
"tests/test_eval_scenarios.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true
disallow_any_unimported = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "uuid6",
    "loguru",
    "psutil",
    "win32gui",
    "win32process",
    "Xlib",
    "Xlib.*",
    "AppKit",
    "Quartz",
    "winrt.*",
    "plyer",
    "apscheduler.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "joblib",
    "hmmlearn",
    "hmmlearn.*",
    "pandas",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
